cmake_minimum_required(VERSION 3.22)
project(untitled7)

set(CMAKE_CXX_STANDARD 14)
#set(REMOTE_INCLUDE_PATH /usr/local/include)
#include_directories(${REMOTE_INCLUDE_PATH})
include_directories(test)
link_libraries(gtest)
add_executable(untitled7 main.cpp )
add_executable(test_main test/test_main.cpp test/mytest.cpp)
