[package]
name = "deep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
clap = "2.34.0"
trust-dns = { version = "0.17.0", default-features = false }
my_err = {path = "../my_err"}

url="2.3.1"
[[bin]]
name = "mac_gen"
[[bin]]
name = "resolve_domain"