[package]
name = "my_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
serde = {version = "1.0.145", features = ["derive"]}
chrono = {version = "0.4.22", features = ["serde"]}
actix-cors = "0.6.2"