[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.24"
clap = "2.33"
trust-dns ={ version = "0.16.1", default-features = false }
rand = "0.7.3"
[[bin]]
name="request"
[[bin]]
name="trait_rpg"
[[bin]]
name="tcp"
[[bin]]
name="resolve"