[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.24"
clap = "2.33"
trust-dns = { version = "0.16.1", default-features = false }
rand = "0.7.3"
rustscan = "2.0.0"

# 提供了一个TCP的实现。
smoltcp = { version = "0.9.1", default-features = false, features = ["log"] }
url = "2"# 用于URL的解析和验证。

[[bin]]
name = "request"
[[bin]]
name = "trait_rpg"
[[bin]]
name = "tcp"
[[bin]]
name = "resolve"
[[bin]]
name = "异常转换"
[[bin]]
name = "mget"