[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.83"
actix-rt = {version = "2.7.0"}
serde = { version = "1.0", features = ["derive"] }
postgres = "0.19"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"

actix-web = "4.3.1"
actix-multipart = "0.6.0"
uuid = { version = "1.3.1", features = ["v4"] }
futures = "0.3.16"
multer = "2.0.3"
actix-cors = "0.6.4"

regex = "1.7.3"

[[bin]]
name = "upload_demo"
[[bin]]
name = "show_post"
