[package]
name = "reqwest2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
serde_json = "1.0.83"
actix-rt = {version = "2.7.0"}
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.17.5"
ssh2 = "0.9.4"
url = "2.4.0"